Card fix, again

--- a/public/locales/nl-data-protection/spectrum-cards.json
+++ b/public/locales/nl-data-protection/spectrum-cards.json
@@ -5,7 +5,7 @@
               ["Transparantie", "Misleiding"],
               ["Gegevens zijn al gewist", "Bewaartermijn is onbeperkt"],
               ["Vrijwillige, geïnformeerde toestemming", "Verplichte toestemming zonder keuze"],
-              ["Volledige inzage", "Gebruiker onbekend met gegevensgebruik"],
+              ["Volledige inzage", "Onbekend met gegevensgebruik"],
               ["Geen doorgifte", "Delen van persoonsgegevens zonder grenzen"],
               ["Privé", "Openbaar"],
               ["Onversleuteld", "Versleuteld"],
@@ -19,17 +19,18 @@
               ["Gegevensverwijdering", "Gegevensverzameling"],
               ["Geen buzzword", "Buzzword"],
               ["Gebruiksonvriendelijk", "Gebruiksvriendelijk"],
-              ["Verouderde Software", "Regelmatige Updates"],
-              ["Intellectueel eigendom", "Open Source"],
-              ["Enkelvoudige Authenticatie", "Twee-Factor Authenticatie"],
-              ["Individuele Gegevens", "Geaggregeerde Gegevens"],
+              ["Verouderde software", "Regelmatige geüpdatet"],
+              ["Beschermd intellectueel eigendom", "Open Source"],
+              ["Slechte authenticatie", "Goede twee-factor authenticatie"],
+              ["Individuele gegevens", "Geaggregeerde gegevens"],
+              ["Zwak wachtwoord", "Sterk wachtwoord"],
               ["Zelf gehost", "SaaS"],
               ["Doelbinding", "Willekeurige verwerking"],
               ["Strenge eisen aan gegevensbeveiliging", "Afwezigheid van beveiligingsmaatregelen"],
               ["Het recht om je onbespied te wanen", "Constante surveillance"],
               ["Datalek gemeld en afgehandeld", "Verborgen datalek"],
               ["Bijzondere categorieën van persoonsgegevens", "Normale persoonsgegevens"],
-              ["Bescherming tegen automatische besluitvorming", "Automatische besluitvorming zonder rechtenbescherming"],
+              ["Bescherming tegen automatische besluitvorming", "Automatische besluitvorming zonder rechtsbescherming"],
               ["Nooit profileren", "Onbeperkt profileren"],
               ["Uitgebreide rechten voor betrokkenen", "Geen rechten voor betrokkenen"],
               ["Opt-out", "Opt-in"],
@@ -38,12 +39,12 @@
               ["Extra bescherming van kindergegevens", "Onbeperkte verwerking van kindergegevens"],
               ["Strenge profileringseisen", "Ongecontroleerde profilering"],
               ["Gecontroleerde toegang en overdracht", "Vrije toegang door derden"],
-              ["Effectief toezicht", "Afwezigheid van een toezichthouder"],
+              ["Effectief toezicht", "Afwezigheid toezichthouder"],
               ["Plicht tot risicobeoordeling (DPIA)", "Geen preventieve maatregelen"],
               ["Verbod op misleidend verzamelen van gegevens", "Misleiding bij gegevensverzameling"],
               ["Geen commercieel gebruik van persoonsgegevens", "Onbeperkte data-handel"],
               ["Verantwoordelijkheid van verwerker", "Geen verantwoordelijkheid van verwerker"],
-              ["Afstemming van bedrijfspraktijken aan privacyregels", "Volledige bedrijfsvrijheid"],
+              ["Afstemming bedrijfspraktijk aan privacyregels", "Volledige bedrijfsvrijheid"],
               ["Geen toegang tot eigen persoonsgegevens", "Volledige toegang tot eigen persoonsgegevens"],
               ["Niet-gespecificeerde doeleinden", "Gespecificeerde doeleinden"],
               ["Geen meldplicht bij datalek", "Verplichte melding van datalek"],
@@ -66,6 +67,6 @@
               ["AI met effectieve mens-machine samenwerking", "AI die menselijke inbreng limiteert"],
               ["AI toegepast met respect voor mensenrechten", "AI toegepast met minachting voor mensenrechten"],
               ["AI die duidelijke gebruiksgrenzen heeft", "AI met vage of onbestaande grenzen"],
-              ["Regulerende AI-wetgeving", "Deregulering of gebrek aan wetgeving voor AI"] 
+              ["Regulerende AI-wetgeving", "Gebrek aan wetgeving voor AI"] 
   ]
 }
