--- a/public/locales/nl/spectrum-cards.json
+++ b/public/locales/nl/spectrum-cards.json
@@ -149,7 +149,7 @@
 ["Minst kwaadaardige bedrijf", "Meest kwaadaardige bedrijf"],
 ["Snack", "Maaltijd"],
 ["Ongelooflijk", "Geloofwaardig"],
-["Afvalerig", "Klassiek"],
+["Mode", "Klassiek"],
 ["Ruikt slecht", "Ruikt goed"],
 ["Star Wars", "Star Trek"],
 ["Angstaanjagend dier", "Aardig dier"],
@@ -176,7 +176,7 @@
 ["Minst machtige god", "Meest krachtige god"],
 ["Onsexy kleur", "Sexy kleur"],
 ["Voordelen voor jou", "Voordelen voor iedereen"],
-["Slechte president", "Goede president"],
+["Slechte premier", "Goede premier"],
 ["Geek", "Nerd"],
 ["Aftreksel", "Origineel"],
 ["Etiquette", "Manieren"],
@@ -219,7 +219,7 @@
 ["Normale begroeting", "Vreemde begroeting"],
 ["Dictatuur", "Democratie"],
 ["Machteloos", "Krachtig"],
-["Vapes", "Vape niet"],
+["Rook", "Vuur"],
 ["Saaie persoon", "Leuk persoon"],
 ["Onderschat boek", "Overschat boek"],
 ["Diepe gedachte", "Oppervlakkige gedachte"],
