Link layout import

--- a/public/locales/nl-data-protection/spectrum-cards.json
+++ b/public/locales/nl-data-protection/spectrum-cards.json
@@ -15,7 +15,8 @@
               ["Strijdig", "Compliant"],
               ["Gegevenscorruptie", "Gegevensintegriteit"],
               ["Ongeautoriseerde toegang", "Geautoriseerde toegang"],
-              ["In de Cloud Opgeslagen", "Lokaal Opgeslagen"],
+              ["In de Cloud opgeslagen", "Lokaal opgeslagen"],
+              ["Verantwoordelijke", "Verwerker"],
               ["Gegevensverwijdering", "Gegevensverzameling"],
               ["Geen buzzword", "Buzzword"],
               ["Gebruiksonvriendelijk", "Gebruiksvriendelijk"],
