--- a/public/locales/nl/spectrum-cards.json
+++ b/public/locales/nl/spectrum-cards.json
@@ -160,7 +160,7 @@
 ["Vermoeiend", "Enerverend"],
 ["80s", "90s"],
 ["Slecht persoon", "Goed persoon"],
-["Voeding", "Haute cuisine"],
+["Voedsel", "Haute cuisine"],
 ["Zacht", "Hard"],
 ["Normaal iets om te hebben", "Raar ding om te hebben"],
 ["Recht", "Rond"],
